Banner section header html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>New Year</title>
 </head>
 <body>
-    
+    <header>
+        <section class="banner-section">
+            <h3>Happy New Year</h3>
+            <h2>New Year Party Celebration</h2>
+        </section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
