--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+    <!-- Google fonts -->
+
     <link rel="stylesheet" href="./styles.css">
     <title>New Year</title>
 </head>
@@ -20,7 +24,14 @@
         </section>
     </header>
     <main>
+        <section class="discount-section">
+            <h2>65% OFF</h2>
+            <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3>ALL CATEGORIES</h3>
+            <img src="./resources/New_Year_Photo.png" alt="Happy New Year Photo">
+        </section>
 
+        
     </main>
     <footer>
 
