--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
             <img src="./resources/New_Year_Photo.png" alt="Happy New Year Photo">
         </section>
 
-        
+        <section class="invitation-section">
+            <div class="invitation-text">
+                <h2>Welcome to midnight party</h2>
+                <p>You're cordially invited to usher in 2024 with us! Join the revelry at City Mall on 31st Dec. Prepare for a night filled with laughter, music, and good company. Your presence will undoubtedly add to the warmth of our celebration.</p>
+                <button>JOIN NOW</button>    
+            </div>
+            <div class="invitation-img">
+                <img src="./resources/Group_70.png" alt="2024 in style">
+            </div>
+        </section>
     </main>
     <footer>
 
