--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                 <img src="./resources/Group_70.png" alt="2024 in style">
             </div>
         </section>
+
+        <section class="portfolio-section">
+            <h3>THE BEST GIFTS</h3>
+            <h2>Our Awesome Portfolio</h2>
+            <p>Celebrate the New Year with our exclusive gifts! Explore curated selections on our site for memorable and joyous surprises for your loved ones.</p>
+            <div class="accessories">
+                <div class="accessory-1">
+                    <img src="./resources/Rectangle_3.png" alt="Rectangle_3.png"><img src="./resources/Rectangle_4.png" alt="Rectangle_4.png"><img src="./resources/Rectangle_5.png" alt="Rectangle_5.png">
+                </div>
+                <div class="accessory-2">
+                    <img src="./resources/Rectangle_6.png" alt="Rectangle_6.png"><img src="./resources/Rectangle_7.png" alt="Rectangle_7.png"><img src="./resources/Rectangle_8.png" alt="Rectangle_8.png">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
