--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;900&display=swap"
+        rel="stylesheet">
     <!-- Google fonts -->
 
     <link rel="stylesheet" href="./styles.css">
@@ -34,8 +35,10 @@
         <section class="invitation-section">
             <div class="invitation-text">
                 <h2>Welcome to midnight party</h2>
-                <p>You're cordially invited to usher in 2024 with us! Join the revelry at City Mall on 31st Dec. Prepare for a night filled with laughter, music, and good company. Your presence will undoubtedly add to the warmth of our celebration.</p>
-                <button>JOIN NOW</button>    
+                <p>You're cordially invited to usher in 2024 with us! Join the revelry at City Mall on 31st Dec. Prepare
+                    for a night filled with laughter, music, and good company. Your presence will undoubtedly add to the
+                    warmth of our celebration.</p>
+                <button>JOIN NOW</button>
             </div>
             <div class="invitation-img">
                 <img src="./resources/Group_70.png" alt="2024 in style">
@@ -45,15 +48,29 @@
         <section class="portfolio-section">
             <h3>THE BEST GIFTS</h3>
             <h2>Our Awesome Portfolio</h2>
-            <p>Celebrate the New Year with our exclusive gifts! Explore curated selections on our site for memorable and joyous surprises for your loved ones.</p>
+            <p>Celebrate the New Year with our exclusive gifts! Explore curated selections on our site for memorable and
+                joyous surprises for your loved ones.</p>
             <div class="accessories">
                 <div class="accessory-1">
-                    <img src="./resources/Rectangle_3.png" alt="Rectangle_3.png"><img src="./resources/Rectangle_4.png" alt="Rectangle_4.png"><img src="./resources/Rectangle_5.png" alt="Rectangle_5.png">
+                    <img src="./resources/Rectangle_3.png" alt="Rectangle_3.png"><img src="./resources/Rectangle_4.png"
+                        alt="Rectangle_4.png"><img src="./resources/Rectangle_5.png" alt="Rectangle_5.png">
                 </div>
                 <div class="accessory-2">
-                    <img src="./resources/Rectangle_6.png" alt="Rectangle_6.png"><img src="./resources/Rectangle_7.png" alt="Rectangle_7.png"><img src="./resources/Rectangle_8.png" alt="Rectangle_8.png">
+                    <img src="./resources/Rectangle_6.png" alt="Rectangle_6.png"><img src="./resources/Rectangle_7.png"
+                        alt="Rectangle_7.png"><img src="./resources/Rectangle_8.png" alt="Rectangle_8.png">
                 </div>
             </div>
+        </section>
+
+        <section class="newsletter-section">
+            <img src="./resources/Group_61.png" alt="News letter icon">
+            <h2>Subscribe Newsletter</h2>
+            <p>Stay in the loop! Subscribe to our newsletter for exclusive offers, latest updates, and exciting
+                promotions. Join now and be the first to experience the latest trends and deals!
+            </p>
+            <form action="">
+                <input type="text" name="" id="" placeholder="user@gmail.com"><input type="submit" value="Subscribe">
+            </form>
         </section>
     </main>
     <footer>
