--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <link rel="stylesheet" href="./styles.css">
     <title>New Year</title>
+    <!-- fontawesome script -->
+    <script src="https://kit.fontawesome.com/a1f8393f8d.js" crossorigin="anonymous"></script>
+    <!-- fontawesome script -->
+
 </head>
 
 <body>
@@ -74,6 +78,28 @@
         </section>
     </main>
     <footer>
+        <section class="address-container">
+            <div class="road-address">
+                <p>44, Big Building Roosevelt Street</p>
+                <p>Beach Gardens Florida 33410</p>
+            </div>
+            <div class="virtual-contact">
+                <p><i class="fa-solid fa-phone-volume"></i> +00 123 584 124</p>
+                <p><i class="fa-brands fa-firefox"></i> www.website.com</p>
+            </div>
+        </section>
+        <hr>
+
+        <section class="social-media-icons"><img src="./resources/Facebook.png" alt="Facebook"><img
+                src="./resources/Instagram.png" alt="Insta"><img src="./resources/Twitter.png" alt="Twitter"><img
+                src="./resources/Linkedin.png" alt="LinkedIn"></section>
+
+        <hr>
+
+        <section class="footer-end">
+            <p>2017, All Rights Reserved.</p>
+            <a href="#">Unsubscribe</a>
+        </section>
 
     </footer>
 </body>
