--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
             </div>
         </section>
 
+        <section class="bonus-offer-section">
+            <div class="offer-text">
+                <h3>NEW BEST OFFER</h3>
+                <h2>Coming Soon</h2>
+                <p>Prepare for a burst of excitement! Our upcoming collection is set to redefine style and elevate your experience. Stay tuned for the grand reveal, as we unleash a wave of innovation and trendy treasures. Coming soon to captivate your senses</p>
+            </div>
+            <div class="offer-img"><img src="./resources/Ellipse_1.png" alt="Coming soon image"></div>
+            <div class="offer-end">
+                <h2>2024</h2>
+                <p>Get ready for a wave of freshness! Our upcoming collection promises style, innovation, and more. Stay tuned for the big reveal. Coming soon to elevate your experience!</p>
+                <img src="./resources/Group_96.png" alt="2024 image">
+            </div>
+        </section>
+
         <section class="portfolio-section">
             <h3>THE BEST GIFTS</h3>
             <h2>Our Awesome Portfolio</h2>
