footer section style modify

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 
     <link rel="stylesheet" href="./styles.css">
     <title>New Year</title>
-    <!-- fontawesome script -->
-    <script src="https://kit.fontawesome.com/a1f8393f8d.js" crossorigin="anonymous"></script>
-    <!-- fontawesome script -->
 
 </head>
 
@@ -98,8 +95,14 @@
                 <p>Beach Gardens Florida 33410</p>
             </div>
             <div class="virtual-contact">
-                <p><i class="fa-solid fa-phone-volume"></i> +00 123 584 124</p>
-                <p><i class="fa-brands fa-firefox"></i> www.website.com</p>
+                <div class="phone-number">
+                    <img src="./resources/Call.png" alt="Call icon">
+                    <p>+00 123 584 124</p>
+                </div>
+                <div class="web-site">
+                    <img src="./resources/Website.png" alt="Website icon">
+                    <p>www.website.com</p>
+                </div>
             </div>
         </section>
         <hr>
